--- a/design.html
+++ b/design.html
@@ -6,8 +6,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
     <title>Decisiones de diseño &mdash; Mi pequeño Sistema Operativo v0.1 documentation</title>
-    <link rel="stylesheet" href="_static/default.css" type="text/css" />
-    <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
+    <link rel="stylesheet" href="static/default.css" type="text/css" />
+    <link rel="stylesheet" href="static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '#',
@@ -17,8 +17,8 @@
         HAS_SOURCE:  true
       };
     </script>
-    <script type="text/javascript" src="_static/jquery.js"></script>
-    <script type="text/javascript" src="_static/doctools.js"></script>
+    <script type="text/javascript" src="static/jquery.js"></script>
+    <script type="text/javascript" src="static/doctools.js"></script>
     <script type="text/javascript" src="_static/translations.js"></script>
     <link rel="top" title="Mi pequeño Sistema Operativo v0.1 documentation" href="index.html" />
     <link rel="prev" title="Un poco de background" href="background.html" /> 
@@ -95,7 +95,7 @@ para tener un sistema operativo minimal.</p>
                                   title="Capítulo anterior">Un poco de <em>background</em></a></p>
             <h3>Esta página</h3>
             <ul class="this-page-menu">
-              <li><a href="_sources/design.txt"
+              <li><a href="sources/design.txt"
                      rel="nofollow">Enseñar el código</a></li>
             </ul>
           <div id="searchbox" style="display: none">
