--- a/background.html
+++ b/background.html
@@ -5,7 +5,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Un poco de background &mdash; Mi pequeño Sistema Operativo v0.1 documentation</title>
+    <title>Un poco de background &mdash; Zafio v0.1 documentation</title>
     <link rel="stylesheet" href="static/default.css" type="text/css" />
     <link rel="stylesheet" href="static/pygments.css" type="text/css" />
     <script type="text/javascript">
@@ -20,7 +20,7 @@
     <script type="text/javascript" src="static/jquery.js"></script>
     <script type="text/javascript" src="static/doctools.js"></script>
     <script type="text/javascript" src="_static/translations.js"></script>
-    <link rel="top" title="Mi pequeño Sistema Operativo v0.1 documentation" href="index.html" />
+    <link rel="top" title="Zafio v0.1 documentation" href="index.html" />
     <link rel="next" title="Decisiones de diseño" href="design.html" />
     <link rel="prev" title="Documentación de Zafio" href="index.html" /> 
   </head>
@@ -37,7 +37,7 @@
         <li class="right" >
           <a href="index.html" title="Documentación de Zafio"
              accesskey="P">anterior</a> |</li>
-        <li><a href="index.html">Mi pequeño Sistema Operativo v0.1 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Zafio v0.1 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -254,7 +254,7 @@ sección de código.</dd></dl>
         <li class="right" >
           <a href="index.html" title="Documentación de Zafio"
              >anterior</a> |</li>
-        <li><a href="index.html">Mi pequeño Sistema Operativo v0.1 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Zafio v0.1 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
