--- a/design.html
+++ b/design.html
@@ -5,7 +5,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Decisiones de diseño &mdash; Mi pequeño Sistema Operativo v0.1 documentation</title>
+    <title>Decisiones de diseño &mdash; Zafio v0.1 documentation</title>
     <link rel="stylesheet" href="static/default.css" type="text/css" />
     <link rel="stylesheet" href="static/pygments.css" type="text/css" />
     <script type="text/javascript">
@@ -20,7 +20,7 @@
     <script type="text/javascript" src="static/jquery.js"></script>
     <script type="text/javascript" src="static/doctools.js"></script>
     <script type="text/javascript" src="_static/translations.js"></script>
-    <link rel="top" title="Mi pequeño Sistema Operativo v0.1 documentation" href="index.html" />
+    <link rel="top" title="Zafio v0.1 documentation" href="index.html" />
     <link rel="prev" title="Un poco de background" href="background.html" /> 
   </head>
   <body>
@@ -33,7 +33,7 @@
         <li class="right" >
           <a href="background.html" title="Un poco de background"
              accesskey="P">anterior</a> |</li>
-        <li><a href="index.html">Mi pequeño Sistema Operativo v0.1 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Zafio v0.1 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -124,7 +124,7 @@ para tener un sistema operativo minimal.</p>
         <li class="right" >
           <a href="background.html" title="Un poco de background"
              >anterior</a> |</li>
-        <li><a href="index.html">Mi pequeño Sistema Operativo v0.1 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Zafio v0.1 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
