--- a/genindex.html
+++ b/genindex.html
@@ -5,7 +5,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Índice &mdash; Mi pequeño Sistema Operativo v0.1 documentation</title>
+    <title>Índice &mdash; Zafio v0.1 documentation</title>
     <link rel="stylesheet" href="static/default.css" type="text/css" />
     <link rel="stylesheet" href="static/pygments.css" type="text/css" />
     <script type="text/javascript">
@@ -20,7 +20,7 @@
     <script type="text/javascript" src="static/jquery.js"></script>
     <script type="text/javascript" src="static/doctools.js"></script>
     <script type="text/javascript" src="_static/translations.js"></script>
-    <link rel="top" title="Mi pequeño Sistema Operativo v0.1 documentation" href="index.html" /> 
+    <link rel="top" title="Zafio v0.1 documentation" href="index.html" /> 
   </head>
   <body>
     <div class="related">
@@ -29,7 +29,7 @@
         <li class="right" style="margin-right: 10px">
           <a href="#" title="Índice General"
              accesskey="I">índice</a></li>
-        <li><a href="index.html">Mi pequeño Sistema Operativo v0.1 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Zafio v0.1 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -79,7 +79,7 @@
         <li class="right" style="margin-right: 10px">
           <a href="#" title="Índice General"
              >índice</a></li>
-        <li><a href="index.html">Mi pequeño Sistema Operativo v0.1 documentation</a> &raquo;</li> 
+        <li><a href="index.html">Zafio v0.1 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
