--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Documentación de Zafio &mdash; Mi pequeño Sistema Operativo v0.1 documentation</title>
+    <title>Documentación de Zafio &mdash; Zafio v0.1 documentation</title>
     <link rel="stylesheet" href="static/default.css" type="text/css" />
     <link rel="stylesheet" href="static/pygments.css" type="text/css" />
     <script type="text/javascript">
@@ -20,7 +20,7 @@
     <script type="text/javascript" src="static/jquery.js"></script>
     <script type="text/javascript" src="static/doctools.js"></script>
     <script type="text/javascript" src="_static/translations.js"></script>
-    <link rel="top" title="Mi pequeño Sistema Operativo v0.1 documentation" href="#" />
+    <link rel="top" title="Zafio v0.1 documentation" href="#" />
     <link rel="next" title="Un poco de background" href="background.html" /> 
   </head>
   <body>
@@ -33,7 +33,7 @@
         <li class="right" >
           <a href="background.html" title="Un poco de background"
              accesskey="N">siguiente</a> |</li>
-        <li><a href="#">Mi pequeño Sistema Operativo v0.1 documentation</a> &raquo;</li> 
+        <li><a href="#">Zafio v0.1 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -121,7 +121,7 @@ falta de tacto.</p>
         <li class="right" >
           <a href="background.html" title="Un poco de background"
              >siguiente</a> |</li>
-        <li><a href="#">Mi pequeño Sistema Operativo v0.1 documentation</a> &raquo;</li> 
+        <li><a href="#">Zafio v0.1 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
