--- a/background.html
+++ b/background.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
-        URL_ROOT:    '#',
+        URL_ROOT:    '',
         VERSION:     '0.1',
         COLLAPSE_MODINDEX: false,
         FILE_SUFFIX: '.html',
@@ -19,7 +19,7 @@
     </script>
     <script type="text/javascript" src="static/jquery.js"></script>
     <script type="text/javascript" src="static/doctools.js"></script>
-    <script type="text/javascript" src="_static/translations.js"></script>
+    <script type="text/javascript" src="static/translations.js"></script>
     <link rel="top" title="Zafio v0.1 documentation" href="index.html" />
     <link rel="next" title="Zafio por dentro" href="zafio.html" />
     <link rel="prev" title="Documentación de Zafio" href="index.html" /> 
@@ -29,7 +29,7 @@
       <h3>Navegación</h3>
       <ul>
         <li class="right" style="margin-right: 10px">
-          <a href="genindex.html" title="Índice General"
+          <a href="genindex.html" title="Índice general"
              accesskey="I">índice</a></li>
         <li class="right" >
           <a href="zafio.html" title="Zafio por dentro"
@@ -662,7 +662,7 @@ sección de código.</dd></dl>
       <h3>Navegación</h3>
       <ul>
         <li class="right" style="margin-right: 10px">
-          <a href="genindex.html" title="Índice General"
+          <a href="genindex.html" title="Índice general"
              >índice</a></li>
         <li class="right" >
           <a href="zafio.html" title="Zafio por dentro"
@@ -675,7 +675,7 @@ sección de código.</dd></dl>
     </div>
     <div class="footer">
       &copy; Copyright 2010, Pablo Antonio.
-      Creado con <a href="http://sphinx.pocoo.org/">Sphinx</a> 0.6.4.
+      Creado con <a href="http://sphinx.pocoo.org/">Sphinx</a> 0.6.6.
     </div>
   </body>
 </html>
