--- a/extension.html
+++ b/extension.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
@@ -12,12 +14,13 @@
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '',
         VERSION:     '0.1',
-        COLLAPSE_MODINDEX: false,
+        COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
       };
     </script>
     <script type="text/javascript" src="static/jquery.js"></script>
+    <script type="text/javascript" src="static/underscore.js"></script>
     <script type="text/javascript" src="static/doctools.js"></script>
     <script type="text/javascript" src="static/translations.js"></script>
     <link rel="top" title="Zafio v0.1 documentation" href="index.html" />
@@ -28,7 +31,7 @@
       <h3>Navegación</h3>
       <ul>
         <li class="right" style="margin-right: 10px">
-          <a href="genindex.html" title="Índice general"
+          <a href="genindex.html" title="Índice General"
              accesskey="I">índice</a></li>
         <li class="right" >
           <a href="zafio.html" title="Zafio por dentro"
@@ -58,27 +61,27 @@ de AT&amp;T, y lo adaptemos al ensamblador de GCC.</li>
       </div>
       <div class="sphinxsidebar">
         <div class="sphinxsidebarwrapper">
-            <h4>Tema anterior</h4>
-            <p class="topless"><a href="zafio.html"
-                                  title="Capítulo anterior">Zafio por dentro</a></p>
-            <h3>Esta página</h3>
-            <ul class="this-page-menu">
-              <li><a href="sources/extension.txt"
-                     rel="nofollow">Enseñar el código</a></li>
-            </ul>
-          <div id="searchbox" style="display: none">
-            <h3>Búsqueda rápida</h3>
-              <form class="search" action="search.html" method="get">
-                <input type="text" name="q" size="18" />
-                <input type="submit" value="Ir a" />
-                <input type="hidden" name="check_keywords" value="yes" />
-                <input type="hidden" name="area" value="default" />
-              </form>
-              <p class="searchtip" style="font-size: 90%">
-              Introduzca los términos de búsqueda o un módulo, clase o nombre de función.
-              </p>
-          </div>
-          <script type="text/javascript">$('#searchbox').show(0);</script>
+  <h4>Tema anterior</h4>
+  <p class="topless"><a href="zafio.html"
+                        title="Capítulo anterior">Zafio por dentro</a></p>
+  <h3>Esta página</h3>
+  <ul class="this-page-menu">
+    <li><a href="sources/extension.txt"
+           rel="nofollow">Enseñar el código</a></li>
+  </ul>
+<div id="searchbox" style="display: none">
+  <h3>Búsqueda rápida</h3>
+    <form class="search" action="search.html" method="get">
+      <input type="text" name="q" size="18" />
+      <input type="submit" value="Ir a" />
+      <input type="hidden" name="check_keywords" value="yes" />
+      <input type="hidden" name="area" value="default" />
+    </form>
+    <p class="searchtip" style="font-size: 90%">
+    Introduzca los términos de búsqueda o un módulo, clase o nombre de función.
+    </p>
+</div>
+<script type="text/javascript">$('#searchbox').show(0);</script>
         </div>
       </div>
       <div class="clearer"></div>
@@ -87,7 +90,7 @@ de AT&amp;T, y lo adaptemos al ensamblador de GCC.</li>
       <h3>Navegación</h3>
       <ul>
         <li class="right" style="margin-right: 10px">
-          <a href="genindex.html" title="Índice general"
+          <a href="genindex.html" title="Índice General"
              >índice</a></li>
         <li class="right" >
           <a href="zafio.html" title="Zafio por dentro"
@@ -96,8 +99,8 @@ de AT&amp;T, y lo adaptemos al ensamblador de GCC.</li>
       </ul>
     </div>
     <div class="footer">
-      &copy; Copyright 2010, Pablo Antonio.
-      Creado con <a href="http://sphinx.pocoo.org/">Sphinx</a> 0.6.6.
+        &copy; Copyright 2010, Pablo Antonio.
+      Creado con <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.0.5.
     </div>
   </body>
 </html>
