--- a/search.html
+++ b/search.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
@@ -12,23 +14,29 @@
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '',
         VERSION:     '0.1',
-        COLLAPSE_MODINDEX: false,
+        COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
       };
     </script>
     <script type="text/javascript" src="static/jquery.js"></script>
+    <script type="text/javascript" src="static/underscore.js"></script>
     <script type="text/javascript" src="static/doctools.js"></script>
     <script type="text/javascript" src="static/translations.js"></script>
     <script type="text/javascript" src="static/searchtools.js"></script>
-    <link rel="top" title="Zafio v0.1 documentation" href="index.html" /> 
+    <link rel="top" title="Zafio v0.1 documentation" href="index.html" />
+  <script type="text/javascript">
+    jQuery(function() { Search.loadIndex("searchindex.js"); });
+  </script>
+   
+
   </head>
   <body>
     <div class="related">
       <h3>Navegación</h3>
       <ul>
         <li class="right" style="margin-right: 10px">
-          <a href="genindex.html" title="Índice general"
+          <a href="genindex.html" title="Índice General"
              accesskey="I">índice</a></li>
         <li><a href="index.html">Zafio v0.1 documentation</a> &raquo;</li> 
       </ul>
@@ -43,8 +51,8 @@
   <div id="fallback" class="admonition warning">
   <script type="text/javascript">$('#fallback').hide();</script>
   <p>
-    Active JavaScript para permitir al funcionalidad
-            de búsqueda.
+    Please activate JavaScript to enable the search
+    functionality.
   </p>
   </div>
   <p>
@@ -77,17 +85,14 @@
       <h3>Navegación</h3>
       <ul>
         <li class="right" style="margin-right: 10px">
-          <a href="genindex.html" title="Índice general"
+          <a href="genindex.html" title="Índice General"
              >índice</a></li>
         <li><a href="index.html">Zafio v0.1 documentation</a> &raquo;</li> 
       </ul>
     </div>
-  
     <div class="footer">
-      &copy; Copyright 2010, Pablo Antonio.
-      Creado con <a href="http://sphinx.pocoo.org/">Sphinx</a> 0.6.6.
+        &copy; Copyright 2010, Pablo Antonio.
+      Creado con <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.0.5.
     </div>
-  <script type="text/javascript" src="searchindex.js"></script>
-
   </body>
 </html>
