--- a/install.html
+++ b/install.html
@@ -34,7 +34,7 @@
       <h3>Navegación</h3>
       <ul>
         <li class="right" style="margin-right: 10px">
-          <a href="genindex.html" title="Índice General"
+          <a href="genindex.html" title="Índice general"
              accesskey="I">índice</a></li>
         <li class="right" >
           <a href="zafio.html" title="Zafio por dentro"
