--- a/genindex.html
+++ b/genindex.html
@@ -33,7 +33,7 @@
       <h3>Navegación</h3>
       <ul>
         <li class="right" style="margin-right: 10px">
-          <a href="#" title="Índice General"
+          <a href="#" title="Índice general"
              accesskey="I">índice</a></li>
         <li><a href="index.html">Zafio v0.1 documentation</a> &raquo;</li> 
       </ul>
