--- a/search.html
+++ b/search.html
@@ -39,7 +39,7 @@
       <h3>Navegación</h3>
       <ul>
         <li class="right" style="margin-right: 10px">
-          <a href="genindex.html" title="Índice General"
+          <a href="genindex.html" title="Índice general"
              accesskey="I">índice</a></li>
         <li><a href="index.html">Zafio v0.1 documentation</a> &raquo;</li> 
       </ul>
@@ -54,8 +54,8 @@
   <div id="fallback" class="admonition warning">
   <script type="text/javascript">$('#fallback').hide();</script>
   <p>
-    Please activate JavaScript to enable the search
-    functionality.
+    Active JavaScript para permitir al funcionalidad
+            de búsqueda.
   </p>
   </div>
   <p>
